# TMS_Diploma

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  commands.txt  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: codeql-analysis.yml  tms_diploma-dev.yml
api/: admin.py  models.py  serializers.py  views.py
api/migrations/: 0001_initial.py
config/: settings.py  urls.py
salon/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
salon/migrations/: 0001_initial.py  0002_alter_masters_master_photo.py  0002_alter_orders_client_phone.py  0003_alter_masters_master_photo.py
salon/templates/: about.html  addclient.html  addorder.html  home_page.html  login.html  masters.html  orders.html  portfolio.html  prices.html  success.html
salon/templatetags/: masters_tags.py  orders_tags.py  prices_tags.py
